<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    android:textAlignment="center"
    tools:context=".Nurse">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="227dp"
        android:layout_height="381dp"
        android:layout_marginEnd="43dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/nurse_button"
        android:onClick="NurCharClick"
        android:src="@drawable/nurchar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="285dp"
        android:layout_height="34dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/button_background"
        android:fontFamily="@font/segoe"
        android:onClick="DocPassClick"
        android:text="@string/SignIn"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/passEditBox"
        android:layout_width="320dp"
        android:layout_height="38dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:fontFamily="@font/segoe"
        android:hint="@string/NurPassHint"
        android:inputType="textPassword"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

</android.support.constraint.ConstraintLayout>