<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginEnd="10dp"
    android:layout_marginStart="10dp"
    android:background="@drawable/back"
    android:paddingEnd="10dp"
    android:paddingStart="10dp"
    android:textAlignment="center"
    tools:context=".Doctor">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="227dp"
        android:layout_height="381dp"
        android:layout_marginEnd="43dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/doctor_button"
        android:src="@drawable/docchar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/passEditBox"
        android:layout_width="335dp"
        android:layout_height="39dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:fontFamily="@font/segoe"
        android:hint="@string/DocPassHint"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:textAlignment="10"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:typeface="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <Button
        android:id="@+id/button"
        android:layout_width="235dp"
        android:layout_height="34dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/button_background"
        android:fontFamily="@font/segoe"
        android:onClick="DocPassClick"
        android:text="@string/SignIn"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.41"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>