<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    tools:context=".MainActivity">


    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="145dp"
        android:layout_height="145dp"
        android:layout_marginBottom="75dp"
        android:layout_marginStart="30dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/doctor_button"
        android:cropToPadding="false"
        android:onClick="ClickDoctor"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/doctor" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="145dp"
        android:layout_height="145dp"
        android:layout_marginBottom="75dp"
        android:layout_marginEnd="30dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/nurse_button"
        android:onClick="ClickNurse"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/nurse" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/HNA_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/stato" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="92dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/Who"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@+id/imageButton2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/doctor_button"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/imageButton2"
        app:layout_constraintEnd_toEndOf="@+id/imageButton2"
        app:layout_constraintStart_toStartOf="@+id/imageButton2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/nurse_button"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/imageButton3"
        app:layout_constraintEnd_toEndOf="@+id/imageButton3"
        app:layout_constraintStart_toStartOf="@+id/imageButton3" />
</android.support.constraint.ConstraintLayout>